force-app/main/default/objects/Flat__c/Flat__c.object-meta.xml
<CustomObject>
    <label>Flat</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Flat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>