force-app/main/default/objects/Flat__c/fields/BHK__c.field-meta.xml
<CustomField>
    <fullName>BHK__c</fullName>
    <label>BHK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>